# Cours_work1

./: .gitignore  README.md  main.py  pyproject.toml
src/: reports.py  services.py  utils.py  views.py
tests/: conftest.py  test_reports.py  test_views.py
